--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "markuplint": "^3.7.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.1.0",
     "stylelint": "^15.4.0",
     "stylelint-config-recommended": "^11.0.0",
