--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,3 @@
 {
-  "extends": "./node_modules/@learningfuze/lfz-config/config/tsconfig.json",
-  "compilerOptions": {
-    "noEmit": false,
-    "moduleDetection": "legacy",
-    "outDir": "js"
-  }
+  "extends": "./node_modules/@learningfuze/lfz-config/config/tsconfig.json"
 }
